--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -72,6 +72,11 @@ header {
 main {
     padding-top: 40px;
     padding-bottom: 40px;
+    img.logo {
+        margin-top: 30px;
+        max-width: 260px;
+        height: auto;
+    }
 }
 
 #map {
