--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -49,6 +49,7 @@ body {
 
 @media only screen and (min-width: $breakpoint-m) {
     .container {
+        max-width: 900px;
         padding-left: 0;
         padding-right: 0;
         margin-left: auto;
